--- a/codigo/assets/css/login.css
+++ b/codigo/assets/css/login.css
@@ -12,7 +12,7 @@ body {
     height: 100vh; 
 }
 
-.container {
+.container-id {
     display: flex;
     width: 100%; 
     height: 100%; 
@@ -61,6 +61,9 @@ body {
     color: rgba(0, 102, 140, 1);
 }
 
+.form-select{
+    margin-top: 15px;
+}
 .form-group {
     margin-bottom: 15px;
 }
